# noflash-attention

./: .gitignore  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
comfyui_node/: __init__.py
noflash_attention/: __init__.py  _detect.py  detect_gpu.py  ffn.py  patch.py  patch_v9.py
tests/: test_correctness.py  test_features.py  test_ffn.py  test_online.py
workflows/: LTX23-22B-MI50.json  README.md  Wan22-5B-MI50.json
