[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "noflash-attention"
version = "1.0.0"
description = "Flash-attention-class memory efficiency for GPUs without flash attention"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["torch>=2.0"]

[tool.setuptools.packages.find]
include = ["noflash_attention*"]
